refactored all of payment and notify
